// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useLocaleHead > basic > should be worked > en 1`] = `
{
  "htmlAttrs": {
    "dir": "ltr",
    "lang": "en-US",
  },
  "link": [
    {
      "hid": "i18n-alt-en",
      "href": "http://localhost:8080/en/about",
      "hreflang": "en",
      "rel": "alternate",
    },
    {
      "hid": "i18n-alt-en-US",
      "href": "http://localhost:8080/en/about",
      "hreflang": "en-US",
      "rel": "alternate",
    },
    {
      "hid": "i18n-alt-ja",
      "href": "http://localhost:8080/ja/about",
      "hreflang": "ja",
      "rel": "alternate",
    },
    {
      "hid": "i18n-alt-ja-JP",
      "href": "http://localhost:8080/ja/about",
      "hreflang": "ja-JP",
      "rel": "alternate",
    },
    {
      "hid": "i18n-can",
      "href": "http://localhost:8080/en/about",
      "rel": "canonical",
    },
  ],
  "meta": [
    {
      "content": "http://localhost:8080/en/about",
      "hid": "i18n-og-url",
      "property": "og:url",
    },
    {
      "content": "en_US",
      "hid": "i18n-og",
      "property": "og:locale",
    },
    {
      "content": "ja_JP",
      "hid": "i18n-og-alt-ja-JP",
      "property": "og:locale:alternate",
    },
  ],
}
`;

exports[`useLocaleHead > basic > should be worked > ja 1`] = `
{
  "htmlAttrs": {
    "dir": "ltr",
    "lang": "ja-JP",
  },
  "link": [
    {
      "hid": "i18n-alt-en",
      "href": "http://localhost:8080/en",
      "hreflang": "en",
      "rel": "alternate",
    },
    {
      "hid": "i18n-alt-en-US",
      "href": "http://localhost:8080/en",
      "hreflang": "en-US",
      "rel": "alternate",
    },
    {
      "hid": "i18n-alt-ja",
      "href": "http://localhost:8080/ja",
      "hreflang": "ja",
      "rel": "alternate",
    },
    {
      "hid": "i18n-alt-ja-JP",
      "href": "http://localhost:8080/ja",
      "hreflang": "ja-JP",
      "rel": "alternate",
    },
    {
      "hid": "i18n-can",
      "href": "http://localhost:8080/ja",
      "rel": "canonical",
    },
  ],
  "meta": [
    {
      "content": "http://localhost:8080/ja",
      "hid": "i18n-og-url",
      "property": "og:url",
    },
    {
      "content": "ja_JP",
      "hid": "i18n-og",
      "property": "og:locale",
    },
    {
      "content": "en_US",
      "hid": "i18n-og-alt-en-US",
      "property": "og:locale:alternate",
    },
  ],
}
`;
